force-app/main/default/objects/H1_Profile__c/H1_Profile__c.object-meta.xml
<CustomObject>
    <label>H1 Profile</label>
    <nameField>
        <label>H1 Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>H1 Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>