force-app/main/default/objects/H1_Profile__c/fields/IsDeletedOffline__c.field-meta.xml
<CustomField>
    <fullName>IsDeletedOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted Offline</label>
    <type>Checkbox</type>
</CustomField>