force-app/main/default/objects/H1_Profile__c/fields/OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>H1Profile</relationshipName>
    <type>Lookup</type>
</CustomField>